results/SVCOMP/specgen/log-StaticCharMethods04-2024_02_29_20_33_08.txt
public class StaticCharMethods04 {
  //@ requires Character.isLetter(c) ==> \result == true;
  //@ requires !Character.isLetter(c) ==> \result == false;
  public static boolean f(char c) {
    return Character.isLetter(c);
  }
}
/home/max/Documents/JMLGPT/tmp/StaticCharMethods04.java:2: error: A \result expression may not be in a requires clause
  //@ requires Character.isLetter(c) ==> \result == true;
                                          ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods04.java:3: error: A \result expression may not be in a requires clause
  //@ requires !Character.isLetter(c) ==> \result == false;
                                           ^
2 errors

public class StaticCharMethods04 {
  //@ ensures Character.isLetter(c) ==> \result == true;
  //@ ensures !Character.isLetter(c) ==> \result == false;
  public static boolean f(char c) {
    return Character.isLetter(c);
  }
}

